--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,5 @@ jobs:
       with:
         java-version: 12
     - name: Build with Maven
-      run: mvn test --file pom.xml
+      run: mvn test
+      
